# cascataV1

./: Cascata_Visao_Geral.docx  Roadmap_48_Implementacoes_Cascata.md  SAD_CascataV1.md  SRS_CascataV1.md  TASK_Fase0_Alicerce_Invisivel.md  TASK_Fase1_A_Forma_do_Castelo.md  cleanup.sh  ideia_fornecida_externamente.txt  install.sh  possivel_problem.txt  pre-feito.txt  problem.txt  rapid.txt  relatorio_forense_fase0.md  tutorial install.txt
.agents/rules/: 1-lei-fundamental-ambiente-de-desenvolvimento.md  2-lei-fundamental-leitura-antes-de-qualquer-acao.md  3-lei-fundamental-qualidade-monumental.md  4-sequencia-de-raciocinio-obrigatoria.md  5-regras-especificas-por-camada.md  6-comunicacao-com-operador.md  7-mapa-de-referencia-rapida.md  8-protecao-dos-arquivos-de-referencia-suprema.md  identidade-e-padrao-de-exigencia.md
control-plane/: Dockerfile  config.dev.yaml  go.mod
control-plane/migrations/: 001_initial_schema.sql  002_downgrade_proposals.sql  003_extensions_status.sql  004_cron_jobs.sql  tenant_init.sql
dashboard/: package.json  svelte.config.js
gateway/: Cargo.toml  Dockerfile  gateway.dev.toml
gateway/src/: config.rs  main.rs
gateway/src/computed/: api_columns.rs  mod.rs
gateway/src/error/: mod.rs  pg_translator.rs
gateway/src/middleware/: abac.rs  jwt.rs  mod.rs  rate_limit.rs  rls_handshake.rs
gateway/src/proxy/: mod.rs  upstream.rs
gateway/src/storage/: magic_bytes.rs  mod.rs  quota.rs  router.rs
gateway/src/validation/: engine.rs  error.rs  expression.rs  mod.rs
scripts/: init-db.sh  seed-extensions-catalog.sql
(+42 files in other folders)
