[package]
name = "cascata-gateway"
version = "0.1.0"
edition = "2021"
description = "Cascata API Gateway — Pingora-based Data Plane"
license = "Apache-2.0"

# Ref: SRS Req-2.1.5, SAD §B, TASK PR-6

[dependencies]
# Pingora — proxy framework by Cloudflare (Rust/Tokio)
pingora = "0.7"
pingora-core = "0.7"
pingora-proxy = "0.7"
pingora-http = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Regex — safe O(m*n) engine, no ReDoS risk (Req-2.19.1 regex validation)
regex = "1"

# HTTP types
http = "1"
bytes = "1"

# Async trait (para ProxyHttp)
async-trait = "0.1"
